오류 수정 완

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity
             android:name=".MemoActivity">
         </activity>
+        <activity android:name=".CheckActivity"></activity>
     </application>
 
 </manifest>
